--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,12 +1,11 @@
 ---
 navigation.title: 'Home'
-layout: 'full-width'
+layout: 'article'
 ---
 
 # Jemima Daisy
 
 A lightweight Nuxt theme to build a Markdown driven website, based on [Nuxt Content](https://content.nuxt.com), [TailwindCSS](https://tailwindcss.com) and [Iconify](https://iconify.design) :sparkles:
-
 
 ## Features
 
@@ -24,7 +23,7 @@ A lightweight Nuxt theme to build a Markdown driven website, based on [Nuxt Cont
 
 ## Setup
 
-::button-link{icon="simple-icons:stackblitz" href="https://stackblitz.com/github/Atinux/content-wind/tree/main/.demo?file=content%2F1.index.md" external}
+::button-link{icon="simple-icons:stackblitz" href="<https://stackblitz.com/github/Atinux/content-wind/tree/main/.demo?file=content%2F1.index.md>" external}
 Play online on Stackblitz
 ::
 
@@ -169,11 +168,9 @@ See the `<MarkdownBlock>` component in [`components/content/MarkdownBlock.vue`](
 
 By leveraging the [`<ContentSlot>`](https://content.nuxt.com/components/content-slot) component from Nuxt Content, you can use both slots and props in Markdown thanks to the [MDC syntax](https://content.nuxt.com/usage/markdown).
 
-
 ## Deployment
 
 [![Deploy with Vercel](https://vercel.com/button)](https://vercel.com/new/clone?repository-url=https%3A%2F%2Fgithub.com%2FAtinux%2Fcontent-wind-template) [![Deploy to Netlify](https://www.netlify.com/img/deploy/button.svg)](https://app.netlify.com/start/deploy?repository=https://github.com/Atinux/content-wind-template)
-
 
 ### Static Hosting
 
