--- a/content/2.commissions.md
+++ b/content/2.commissions.md
@@ -1,6 +1,6 @@
 ---
 navigation.title: 'Commissions'
-layout: 'full-width'
+layout: 'article'
 # Custom og:image
 head.description: 'This is a custom description for Content Wind about page.'
 head.image: 'https://fastly.picsum.photos/id/866/536/354.jpg?hmac=tGofDTV7tl2rprappPzKFiZ9vDh5MKj39oa2D--gqhA'
